--- a/tsconfig.json
+++ b/tsconfig.json
@@ -86,3 +86,31 @@
     { "path": "./tsconfig.vitest.json" }
   ]
 }
+{
+  "compilerOptions": {
+    "target": "ES2022",
+    "module": "NodeNext", // Changed from ESNext
+    "moduleResolution": "NodeNext",
+    "strict": true,
+    "jsx": "react-jsx",
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["./src/*"]
+    },
+    "types": [
+      "vite/client",
+      "vitest/globals"
+    ],
+    "skipLibCheck": true,
+    "forceConsistentCasingInFileNames": true,
+    "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true
+  },
+  "include": [
+    "src",
+    "vite.config.ts"
+  ],
+  "exclude": [
+    "node_modules"
+  ]
+}
