--- a/package.json
+++ b/package.json
@@ -74,6 +74,10 @@
     "vite-plugin-checker": "^0.6.0",
     "vitest": "^1.5.0",
     "jsdom": "^24.0.0"
+    "@types/node": "^20.11.19",
+"@vitejs/plugin-react": "^4.2.1",
+"vite": "^5.1.4",
+"vitest": "^1.3.1"
   },
   "peerDependencies": {
     "react": "^18.2.0",
