--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,96 +1,27 @@
 {
   "compilerOptions": {
-    /* Base Configuration */
-    "target": "ES2022",
-    "lib": ["ES2022", "DOM", "DOM.Iterable"],
-    "module": "NodeNext",
-    "moduleResolution": "NodeNext",
-    "baseUrl": ".",
-    
-    /* Strict Type-Checking */
+    "target": "ES2020",
+    "useDefineForClassFields": true,
+    "lib": ["ES2020", "DOM", "DOM.Iterable"],
+    "module": "ESNext",
+    "skipLibCheck": true,
     "strict": true,
-    "noImplicitAny": true,
-    "strictNullChecks": true,
-    "strictFunctionTypes": true,
-    "strictBindCallApply": true,
-    "strictPropertyInitialization": true,
-    "noImplicitThis": true,
-    "alwaysStrict": true,
-    
-    /* Linting Rules */
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
-    "noImplicitReturns": true,
-    "noFallthroughCasesInSwitch": true,
-    "allowUnreachableCode": false,
-    
-    /* Module Resolution */
-    "esModuleInterop": true,
-    "allowSyntheticDefaultImports": true,
+    "forceConsistentCasingInFileNames": true,
+    "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "forceConsistentCasingInFileNames": true,
-    
-    /* Path Aliases */
-    "paths": {
-      "@/*": ["./src/*"],
-      "@components/*": ["./src/components/*"],
-      "@lib/*": ["./src/lib/*"],
-      "@assets/*": ["./src/assets/*"],
-      "@types/*": ["./src/types/*"]
-    },
-    
-    /* JSX/React */
-    "jsx": "react-jsx",
-    "jsxImportSource": "react",
-    
-    /* Output Control */
     "noEmit": true,
-    "incremental": true,
-    "composite": true,
-    
-    /* Type Checking */
-    "skipLibCheck": true,
-    "types": [
-      "vite/client",
-      "vitest/globals"
-    ],
-    "typeRoots": [
-      "./node_modules/@types",
-      "./src/types"
-    ]
+    "jsx": "react-jsx",
+    "types": ["vite/client", "vitest/globals"],
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["src/*"]
+    }
   },
-  
   "include": [
     "src/**/*.ts",
     "src/**/*.tsx",
-    "src/**/*.json",
-    "vite.config.ts",
-    "vitest.config.ts"
+    "vite.config.ts"
   ],
-  
-  "exclude": [
-    "node_modules",
-    "dist",
-    "**/*.test.ts",
-    "**/*.spec.ts",
-    "**/*.stories.tsx",
-    "**/*.mdx",
-    "**/__mocks__/*"
-  ],
-  
-  "references": [
-    { 
-      "path": "./tsconfig.app.json",
-      "composite": true
-    },
-    { 
-      "path": "./tsconfig.node.json",
-      "composite": true
-    },
-    { 
-      "path": "./tsconfig.vitest.json",
-      "composite": true
-    }
-  ]
+  "exclude": ["node_modules"]
 }
